pinctrl: meson: allow gpio to request irq
Add the ability for gpio to request irq from the gpio interrupt controller
if present. We have to specificaly check that the parent interrupt
controller is the gpio interrupt controller because gpio on meson SoCs can't
generate interrupt directly on the GIC.

Signed-off-by: Jerome Brunet <jbrunet@baylibre.com>

--- a/drivers/pinctrl/Kconfig
+++ b/drivers/pinctrl/Kconfig
@@ -126,7 +126,9 @@ config PINCTRL_MESON
 	select PINCONF
 	select GENERIC_PINCONF
 	select GPIOLIB
+	select IRQ_DOMAIN
 	select OF_GPIO
+	select OF_IRQ
 	select REGMAP_MMIO
 
 config PINCTRL_OXNAS
